Add email address.

--- a/README
+++ b/README
@@ -14,7 +14,7 @@ usually takes less than two minutes.
 It has since been generalized to be applicable on any project in need of
 fast compile feedback.
 
-Copyright (C) 2010-2012 Björn Stenberg
+Copyright (C) 2010-2012 Björn Stenberg <bjorn@haxx.se>
 
 This program is free software; you can redistribute it and/or
 modify it under the terms of the GNU General Public License
